--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=JAC-IDM:cond-mail
 sonar.projectName=Conditional Email Program
 sonar.projectVersion=3.2.1
 sonar.sources=.
-sonar.exclusions=setup.py,version.py
+sonar.exclusions=test/unit/cond-mail/*.py,setup.py,version.py
 sonar.sourceEncoding=UTF-8
 sonar.language=py
 sonar.login=17fe975538e9162e0eaf961c990dc66b73ca1fc5
