--- a/sonar-project.JACIDM.properties
+++ b/sonar-project.JACIDM.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=JAC-IDM:cond-mail
-sonar.projectName=Conditional Email Program
+sonar.projectName=Conditional Email
 sonar.projectVersion=3.2.1
 sonar.sources=.
 sonar.exclusions=test/unit/cond-mail/*.py,setup.py,version.py
