--- a/sonar-project.JACIDM.properties
+++ b/sonar-project.JACIDM.properties
@@ -2,7 +2,9 @@ sonar.projectKey=JAC-IDM:cond-mail
 sonar.projectName=Conditional Email
 sonar.projectVersion=3.2.2
 sonar.sources=.
-sonar.exclusions=test/unit/cond-mail/*.py,setup.py,version.py
+sonar.exclusions=setup.py,version.py
+sonar.coverage.exclusions=test/unit/cond-mail/*.py
+sonar.cpd.exclusions=test/unit/cond-mail/*.py
 sonar.sourceEncoding=UTF-8
 sonar.language=py
 sonar.login=17fe975538e9162e0eaf961c990dc66b73ca1fc5
